# skwaq

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.blarify  LICENSE  README.md  add_ast_to_investigation.py  add_code_to_ast.py  api_output.txt  ast_92deed5b-ebf3-48aa-93b5-1c235130b290_visualization.html  ast_summaries_visualization.html  attackbot_comprehensive.html  attackbot_comprehensive_visualization.html  attackbot_knowledge_graph_visualization.html  autogen_patch.py  check_api.py  check_ast_relationships.py  check_code_summaries.py  check_db.py  check_fixed_visualization.py  check_investigation_relationships.py  check_part_of.py  check_summaries.py  check_summarization.py  check_visualization_api.py  clean_database.py  code_summary_info_4f96b072-4e8a-423a-b1d2-9a7af0e647e6.json  count_node_types.py  create_and_visualize.py  create_ast_summary_viz.py  create_ast_visualization.py  create_attackbot_viz.py  create_comprehensive_viz.py  create_demo_viz.py  create_investigation.py  create_investigation_fixed.py  diagnose_database.py  direct_ast_visualization.py  (+74 more)
.github/: autogen-doc.md  copilot-instructions.md
.github/workflows/: docker-build.yml  docs.yml  tests.yml
Specifications/: AgentPrompt.md  CodeRefactoring.md  GraphicalUserInterface.md  ImplementationPlan.md  Ingestion.md  IngestionSpec.md  KnowledgeGraph.md  SourcesAndSinksWorkflow.md  Vulnerability Assessment Copilot.md  VulnerabilityAssessmentCopilot.md  api-plan.md  api.md  new-spec-template.md  prompt-backlog.md  prompt-history.md  status.md
Specifications/RefactoringPrompts/: IngestionPrompt.md  SourcesandSinksPrompt.md
config/: default_config.json
data/knowledge/: Evaluating a codebase for vulnerabilities.md  Using CodeQL to find Vulnerabilities.md
demos-archive/: attackbot_ast_visualization.html  attackbot_full.html  attackbot_graph.html  attackbot_repository_visualization.html
docs/: Makefile  VibeCoddingWontSaveYou.md  admin_guide.md  api_reference.md  ast_visualization_guide.md  cli_command_reference.md  cli_demo.md  cli_guide.md  cli_quick_start.md  conf.py  frontend_integration.md  gui_guide.md  gui_quick_start.md  index.rst  ingestion_guide.md  investigation-inv-46dac8c5-graph.html  service_management.md  sources_and_sinks_guide.md  troubleshooting.md  user_guide.md
docs/demos/: ai-samples-summary.md  ai-samples-visualization.html  ast-visualization-gui.md  ast_visualization_demo.md  attackbot_analysis_demo.md  cli_demo2.md  investigation-demo.html  investigation-gui-integration.md  investigation-screenshot.md
docs/deployment/: backup_recovery.md  cloud_deployment.md  container_orchestration.md  high_availability.md  on_premises.md
examples/: ingestion_example.py  investigation-graph-visualization.html  sources_and_sinks_example.py
frontend/public/mock-api/: investigations.json
reports/: attackbot-sources-sinks.markdown  sources_and_sinks_inv-1b6c3b82.markdown  sources_and_sinks_inv-90ce7623.markdown  sources_and_sinks_inv-ac7a0c64.markdown
scripts/: fetch_cwe_data.py  skwaq
scripts/ci/: run-local-ci.sh
scripts/db/: ensure_neo4j.py
scripts/dev/: manage_api.py  run-dev.sh  run_api.py  run_dev.py  run_gui.sh  run_test_api.py  service_test.py  test_api_server.py  test_server.py
scripts/infrastructure/: azure-auth.sh  deploy-openai.sh  openai-resources.bicep  verify-openai-models.sh
scripts/infrastructure/bicep/: azure-openai.bicep
scripts/setup/: setup_dev_environment.sh
skwaq/: __init__.py  __main__.py  skwaq_cli.py
skwaq/agents/: __init__.py  agent_factory.py  autogen_compat.py  autogen_integration.py  base.py  base_vulnerability_agent.py  code_analysis_agent.py  core_agents.py  critic_agent.py  events.py  knowledge_agent.py  legacy_code_analysis_agent.py  legacy_critic_agent.py  legacy_knowledge_agent.py  orchestration_agent.py  orchestrator_agent.py  pattern_matching_agent.py  registry.py  semantic_analysis_agent.py  skwaq_agent.py  vulnerability_agents.py  vulnerability_events.py  vulnerability_research_agent.py
skwaq/agents/communication_patterns/: debate.py  (+4 more)
skwaq/api/: __init__.py  app.py  auth.py  chat.py  events.py  investigations.py  knowledge_graph.py  repositories.py  settings.py  workflows.py
skwaq/cli/: __init__.py  main.py  main.py.bak  main.py.new  refactored_main.py
skwaq/code_analysis/: __init__.py  analyzer.py  blarify_integration.py  codeql_integration.py  metrics_collector.py  parallel_orchestrator.py  tool_integration.py
skwaq/core/: __init__.py  documentation.py  installation.py  openai_client.py  release_manager.py
skwaq/db/: __init__.py  graph_visualization.py  neo4j_connector.py  schema.py
skwaq/events/: __init__.py  system_events.py
skwaq/frontend/: package-lock.json  package.json  tsconfig.json
skwaq/ingestion/: __init__.py  ast_mapper.py  code_analysis.py  code_ingestion.py  cwe_ingestion.py  documentation.py  exceptions.py  filesystem.py  ingestion.py  knowledge_ingestion.py  repository.py
skwaq/integration/: __init__.py  e2e_testing.py  performance_optimization.py  system_integration.py
skwaq/protos/: __init__.py
skwaq/security/: __init__.py  audit.py  authentication.py  authorization.py  compliance.py  encryption.py  integration.py  sandbox.py  vulnerability.py
skwaq/shared/: __init__.py  finding.py  service_manager.py  utils.py
skwaq/utils/: __init__.py  config.py  db_init.py  logging.py  telemetry.py
skwaq/visualization/: __init__.py  ast_visualizer.py  graph_visualizer.py
skwaq/workflows/: __init__.py  base.py  guided_inquiry.py  qa_workflow.py  sources_and_sinks.py  tool_invocation.py  vulnerability_research.py
tests/: README.md  __init__.py  conftest.py  run_tests.py
tests/integration/: README.md  conftest.py
tests/milestones/: c1_validation.py  real_test_K2.py  test_A1.py  test_A2.py  test_A3.py  test_C1.py  test_C2.py  test_C3.py  test_C4.py  test_F1.py  test_F2.py  test_F3.py  test_G1.py  test_G2.py  test_G3.py  test_I1.py  test_I2.py  test_I3.py  test_K1.py  test_K2.py  test_W1.py  test_W2.py  test_W3.py  test_W4.py
tests/unit/: __init__.py  conftest.py
(+245 files in other folders)
