[tool.poetry]
name = "skwaq"
version = "0.1.0"
description = "Skwaq - Vulnerability Assessment Copilot"
authors = ["Microsoft Hack Team <example@example.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
openai = "1.10.0"
rich = "^12.0.0"
neo4j = "^5.0.0"
autogen-core = "^0.2.0"
protobuf = "^4.21.0"
grpcio = "^1.59.0"
grpcio-tools = "^1.59.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
mypy = "^1.0.0"
flake8 = "^6.0.0"
isort = "^5.0.0"
pydocstyle = "^6.0.0"
docstr-coverage = "^2.0.0"
pre-commit = "^3.0.0"
sphinx = "^7.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.23.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100
exclude = ["*.egg", "build", "dist"]
extend-ignore = ["E203"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "--cov=skwaq --cov-report=term-missing"

[tool.coverage.run]
source = ["skwaq"]
omit = ["*/__init__.py", "*/tests/*"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104"]

[tool.poetry.scripts]
skwaq = "skwaq.cli.main:main"
